--- a/PerfectSelfBackend/PerfectSelf.Backend/Site.Master
+++ b/PerfectSelfBackend/PerfectSelf.Backend/Site.Master
@@ -62,7 +62,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>&copy; <%: DateTime.UtcNow.Year %> - My ASP.NET Application</p>
             </footer>
         </div>
 
